# Bestiarium

./: README.md  package-lock.json  package.json
Backend/: main.py  pyproject.toml
SampleData/: monsters.json  sizes.json  types.json
src/: App.js  index.css
src/components/: Main.js  MainComponent.js  TestType.js
src/components/statCats/: Defense.js  Ecology.js  MainStats.js  Offense.js  Special.js  Statistics.js
