[tool.poetry]
name = "BestiariumServer"
version = "0.1.0"
description = "Data handling for Bestiarium"
authors = ["CodyEthanJordan"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
requests = "^2.25.1"
pymongo = "^3.11.3"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
